--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,22 @@
-<p>login-page works!</p>
+<div class="flex flex-column">
+  <span class="text-lg mb-4"> Login </span>
+
+  <mat-form-field>
+    <mat-label>Usuario</mat-label>
+    <input type="text" matInput placeholder="Nombre del ususario" />
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Contraseña</mat-label>
+    <input type="password" matInput placeholder="Contraseña" />
+  </mat-form-field>
+
+  <button mat-button mat-flat-button color="primary">
+    <mat-icon>data_saver_on</mat-icon>
+    Ingresar</button>
+
+
+    <div class="flex justify-content-end mt-5">
+      <a routerLink="/auth/new-account"> Aún no tienes cuenta?</a>
+    </div>
+</div>
