--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -38,7 +38,7 @@
   </mat-toolbar>
 
 
-  <div class="container">
+  <div class="container p-2 ">
     <!-- router-outlet se encarga de enseñarnos las rutas hijas -->
     <router-outlet></router-outlet>
   </div>
