carga de imagenes en archivo con ruta no optimizada

--- a/src/app/heroes/components/card/card.component.html
+++ b/src/app/heroes/components/card/card.component.html
@@ -5,6 +5,7 @@ mat-card-actions<mat-card>
   </mat-card-header>
 
   <!-- TODO: imagen -->
+   <img mat-card-image [src]="'assets/heroes/' + hero.id + '.jpg'"  [alt]="hero.superhero"  >
 
   <mat-card-content class="mt-2">
     <h4>
