--- a/src/app/heroes/components/card/card.component.html
+++ b/src/app/heroes/components/card/card.component.html
@@ -1,4 +1,4 @@
-mat-card-actions<mat-card>
+<mat-card tabindex="1">
   <mat-card-header>
     <mat-card-title>{{ hero.superhero }}</mat-card-title>
     <mat-card-subtitle>{{ hero.alter_ego }}</mat-card-subtitle>
