--- a/src/app/heroes/pages/search-page/search-page.component.html
+++ b/src/app/heroes/pages/search-page/search-page.component.html
@@ -1,1 +1,34 @@
-<p>search-page works!</p>
+<div class="flex flex-column p-2">
+
+
+  <mat-form-field>
+    <mat-label> Buscador de héroes</mat-label>
+    <input
+      type="text"
+      matInput
+      [formControl]="searchInput"
+      (input)="searchHero()"
+      [matAutocomplete]="auto"
+    />
+
+    <mat-autocomplete autoActiveFirstOption
+    #auto="matAutocomplete"
+    (optionSelected)="onSelectedOption($event)"
+    >
+      <mat-option
+        *ngFor="let hero of heroes"
+        [value]="hero"
+      >
+        {{ hero.superhero }}
+      </mat-option>
+
+      <mat-option
+      *ngIf="heroes.length === 0 && searchInput.value && searchInput.value.length > 0"
+      value="">
+        No se encontró nada con ese término {{ searchInput.value }}
+      </mat-option>
+
+    </mat-autocomplete>
+  </mat-form-field>
+  {{ selectedHero | json }}
+</div>
