reactive forms, conexion template, getter, actualizar heroes

--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -8,30 +8,30 @@
   <div class="col-12 sm:col-6">
     <mat-card>
       <mat-card-content>
-        <div class="grid">
+        <form class="grid"  [formGroup]="heroForm" (ngSubmit)="onSubmit()">
           <mat-form-field class="col-12 sm:col-6">
             <mat-label> Superhéroe</mat-label>
-            <input matInput type="text" required />
+            <input matInput type="text" required  formControlName="superhero"/>
           </mat-form-field>
 
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Alter Ego</mat-label>
-            <input matInput type="text" required />
+            <input matInput type="text" required  formControlName="alter_ego"/>
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label> Primera aparición</mat-label>
-            <input matInput type="text" required />
+            <input matInput type="text" required formControlName="first_appearance" />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label> Personajes </mat-label>
-            <input matInput type="text" required />
+            <input matInput type="text" required  formControlName="characters"/>
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label> Creador</mat-label>
-            <mat-select required="">
+            <mat-select required  formControlName="publisher">
               <mat-option
                 *ngFor="let publisher of publishers"
                 [value]="publisher.id"
@@ -40,14 +40,19 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+
+          <mat-form-field class="col-12">
+            <mat-label> Foto alternativa </mat-label>
+            <input matInput type="text"   formControlName="alt_img"/>
+          </mat-form-field>
+        </form>
 
         <div class="flex justify-content-between">
           <button mat-flat-button color="warn">
             <mat-icon>delete</mat-icon>
             Borrar</button>
 
-          <button mat-flat-button color="primary">
+          <button mat-flat-button color="primary" (click)="onSubmit()">
             <mat-icon>save</mat-icon>
 
             Guardar
@@ -61,7 +66,7 @@
 
   <div class="col-12 sm:col-6">
 <mat-card>
-  <img src="" alt="imagen del héroe" mat-card-image>
+  <img [src]="currentHero|heroImage" alt="imagen del héroe" mat-card-image>
 </mat-card>
 
 
@@ -72,3 +77,9 @@
 
 
 </div>
+
+<pre>
+
+  {{currentHero |json}}
+
+</pre>
