--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,6 +1,6 @@
 <h1>
-  Editar/Agregar héroe
-  <small>Superman</small>
+{{currentHero.id?'Editar': 'Agregar'}} héroe
+  <strong>{{currentHero.superhero}}</strong>
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -48,9 +48,10 @@
         </form>
 
         <div class="flex justify-content-between">
-          <button mat-flat-button color="warn">
+          <button *ngIf="currentHero.id"  mat-flat-button color="warn">
             <mat-icon>delete</mat-icon>
             Borrar</button>
+            <span></span>
 
           <button mat-flat-button color="primary" (click)="onSubmit()">
             <mat-icon>save</mat-icon>
