--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -48,7 +48,9 @@
         </form>
 
         <div class="flex justify-content-between">
-          <button *ngIf="currentHero.id"  mat-flat-button color="warn">
+          <button *ngIf="currentHero.id"
+          (click)="onDeleteHero()"
+          mat-flat-button color="warn">
             <mat-icon>delete</mat-icon>
             Borrar</button>
             <span></span>
