autenticacion e inicio logica guard

--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -33,7 +33,8 @@
     </button>
 
     <span class="spacer"></span>
-    <button mat-button>Logout</button>
+    <span>{{user?.user}}</span>
+    <button mat-button (click)="onLogout()">Logout</button>
 
   </mat-toolbar>
 
